more build script work